13. Service Mesh with Istio/3. sample-app/3. Authorization/1. auth-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  action: DENY
  rules:
    - {}
# To limit access between services, we can deny all traffic by default.
